[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/themes/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://UI/shop/ShopItem.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/roboto_20.tres" type="DynamicFont" id=3]

[node name="ShopItem" type="Control"]
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButton" type="Button" parent="."]
anchor_left = 0.74
anchor_top = 0.05
anchor_right = 0.985
anchor_bottom = 0.95
text = "Buy"
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.0216667
anchor_right = 0.74
anchor_bottom = 0.95
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NameLabel" type="Label" parent="VBoxContainer"]
margin_right = 431.0
margin_bottom = 29.0
text = "Item Name"
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
margin_top = 33.0
margin_right = 431.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 3 )
text = "Description"
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PriceLabel" type="Label" parent="VBoxContainer"]
margin_top = 61.0
margin_right = 431.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 3 )
text = "Price"
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}
